--- a/modules/user_manual/pages/_partials/nav.adoc
+++ b/modules/user_manual/pages/_partials/nav.adoc
@@ -19,6 +19,7 @@
 **** xref:user_manual:files/encrypting_files.adoc[Encrypting Files]
 **** xref:user_manual:files/deleted_file_management.adoc[Managing Deleted Files]
 **** xref:user_manual:files/large_file_upload.adoc[Large File Uploads]
+**** xref:user_manual:files/manual_file_locking.adoc[Manual File Locking]
 **** xref:user_manual:files/files_lifecycle.adoc[File Lifecycle Management]
 *** xref:user_manual:files/public_link_shares.adoc[Public Link Shares]
 *** xref:user_manual:files/federated_cloud_sharing.adoc[Federated Cloud Sharing]
