--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,4 +1,5 @@
 .ownCloud Server Documentation
+* xref:index.adoc[Introduction]
 include::admin_manual:{partialsdir}nav.adoc[]
 include::user_manual:{partialsdir}nav.adoc[]
 include::developer_manual:{partialsdir}nav.adoc[]
