--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_18_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_18_04.adoc
@@ -1,29 +1,25 @@
-= Install ownCloud on Ubuntu 20.04
+= Install ownCloud on Ubuntu 18.04
 :toc: right
 :logrotate-url: https://linux.die.net/man/8/logrotate
 :webserver-user: www-data
 :webserver-group: www-data
 :install-directory: /var/www/owncloud
 
-== Introduction
-
-This is a short guide to installing ownCloud on a fresh installation of Ubuntu 20.04.
+This is an ultra-short guide to installing ownCloud on a fresh installation of Ubuntu 18.04.
 Run the following commands in your terminal to complete the installation.
-
-NOTE: This guide can not go into details and has its limits by nature. If you experience issues like with dependencies of PHP or other relevant things like the operating system, web server or database, look at the xref:installation/manual_installation/manual_installation.adoc#ubuntu-20-04-lts-server[Detailed Installation Guide]
-for more information.
 
 == Prerequisites
 
-* A fresh installation of https://www.ubuntu.com/download/server[Ubuntu 20.04] with SSH enabled.
-* This guide assumes that you are working as the root user.
-* Your ownCloud directory will be located in `/var/www/owncloud/`
+* A fresh installation of https://releases.ubuntu.com/18.04[Ubuntu 18.04] with SSH enabled.
+* This guide assumes that you are connected as the root user.
+* This guide assumes your ownCloud directory is located in `/var/www/owncloud/`
 
 == Preparation
 
 First, ensure that all the installed packages are entirely up to date, and that PHP is available in the APT repository.
 To do so, follow the instructions below:
 
+[source,console,subs="attributes+"]
 ----
 apt update && \
   apt upgrade -y
@@ -38,41 +34,47 @@ Create a helper script to simplify running xref:configuration/server/occ_command
 FILE="/usr/local/bin/occ"
 /bin/cat <<EOM >$FILE
 #! /bin/bash
+
 cd {install-directory}
-sudo -E -u {webserver-user} /usr/bin/php {install-directory}/occ "\$@"
+sudo -u {webserver-user} /usr/bin/php {install-directory}/occ "\$@"
 EOM
 ----
 
 Make the helper script executable:
 
+[source,console,subs="attributes+"]
 ----
 chmod +x /usr/local/bin/occ
 ----
 
 === Install the Required Packages
 
+[source,console,subs="attributes+"]
 ----
 apt install -y \
   apache2 \
   libapache2-mod-php \
   mariadb-server \
-  openssl redis-server wget \
+  openssl \
   php-imagick php-common php-curl \
-  php-gd php-imap php-intl \
+  php-gd php-gettext php-imap php-intl \
   php-json php-mbstring php-mysql \
   php-ssh2 php-xml php-zip \
-  php-apcu php-redis php-ldap 
+  php-apcu php-redis redis-server \
+  wget
 ----
-
-Note : php 7.4 is the default version installable with Ubuntu 20.04
 
 === Install the Recommended Packages
 
+[source,console,subs="attributes+"]
 ----
 apt install -y \
-  ssh bzip2 rsync curl jq \
-  inetutils-ping coreutils
+  ssh bzip2 sudo cron rsync curl jq \
+  inetutils-ping smbclient php-libsmbclient \
+  php-smbclient coreutils php-ldap
 ----
+
+WARNING: Ubuntu 18.04 includes smbclient 4.7.6, which has a known limitation of only using version 1 of the SMB protocol.
 
 == Installation
 
@@ -80,8 +82,10 @@ apt install -y \
 
 ==== Change the Document Root
 
+[source,console,subs="attributes+"]
 ----
 sed -i "s#html#owncloud#" /etc/apache2/sites-available/000-default.conf
+
 service apache2 restart
 ----
 
@@ -94,6 +98,7 @@ include::{examplesdir}installation/ubuntu/18.04/create-vhost-config.sh[]
 
 ==== Enable the Virtual Host Configuration
 
+[source,console,subs="attributes+"]
 ----
 a2ensite owncloud.conf
 service apache2 reload
@@ -101,7 +106,9 @@ service apache2 reload
 
 === Configure the Database
 
+[source,console,subs="attributes+"]
 ----
+service mysql start
 mysql -u root -e "CREATE DATABASE IF NOT EXISTS owncloud; \
 GRANT ALL PRIVILEGES ON owncloud.* \
   TO owncloud@localhost \
@@ -110,8 +117,10 @@ GRANT ALL PRIVILEGES ON owncloud.* \
 
 ==== Enable the Recommended Apache Modules
 
+[source,console,subs="attributes+"]
 ----
 echo "Enabling Apache Modules"
+
 a2enmod dir env headers mime rewrite setenvif
 service apache2 reload
 ----
@@ -121,13 +130,14 @@ service apache2 reload
 [source,console,subs="attributes+"]
 ----
 cd /var/www/
-wget https://download.owncloud.org/community/{oc-complete-name}.tar.bz2 && \
-tar -xjf {oc-complete-name}.tar.bz2 && \
+wget https://download.owncloud.org/community/owncloud-{latest-server-download-version}.tar.bz2 && \
+tar -xjf owncloud-{latest-server-download-version}.tar.bz2 && \
 chown -R www-data. owncloud
 ----
 
 === Install ownCloud
 
+[source,console,subs="attributes+"]
 ----
 occ maintenance:install \
     --database "mysql" \
@@ -140,6 +150,7 @@ occ maintenance:install \
 
 === Configure ownCloud's Trusted Domains
 
+[source,console,subs="attributes+"]
 ----
 myip=$(hostname -I|cut -f1 -d ' ')
 occ config:system:set trusted_domains 1 --value="$myip"
@@ -149,6 +160,7 @@ occ config:system:set trusted_domains 1 --value="$myip"
 
 Set your background job mode to cron
 
+[source,console,subs="attributes+"]
 ----
 occ background:cron
 ----
@@ -166,14 +178,14 @@ chmod 0600 /var/spool/cron/crontabs/{webserver-user}
 If you need to sync your users from an LDAP or Active Directory Server, add this additional xref:configuration/server/background_jobs_configuration.adoc[Cron job]. Every 15 minutes this cron job will sync LDAP users in ownCloud and disable the ones who are not available for ownCloud. Additionally, you get a log file in `/var/log/ldap-sync/user-sync.log` for debugging.
 ====
 
-[source,subs="attributes+"]
+[source,console,subs="attributes+"]
 ----
-echo "*/15 * * * * /var/www/owncloud/occ user:sync 'OCA\User_LDAP\User_Proxy' -m disable -vvv >> /var/log/ldap-sync/user-sync.log 2>&1" >> /var/spool/cron/crontabs/{webserver-user}
-chown {webserver-user}.crontab  /var/spool/cron/crontabs/{webserver-user}
-chmod 0600  /var/spool/cron/crontabs/{webserver-user}
+echo "*/15 * * * * /var/www/owncloud/occ user:sync 'OCA\User_LDAP\User_Proxy' -m disable -vvv >> /var/log/ldap-sync/user-sync.log 2>&1" > /var/spool/cron/crontabs/www-data
+chown www-data.crontab  /var/spool/cron/crontabs/www-data
+chmod 0600  /var/spool/cron/crontabs/www-data
 mkdir -p /var/log/ldap-sync
 touch /var/log/ldap-sync/user-sync.log
-chown {webserver-user}. /var/log/ldap-sync/user-sync.log
+chown www-data. /var/log/ldap-sync/user-sync.log
 ----
 
 === Configure Caching and File Locking
@@ -185,9 +197,13 @@ Execute these commands:
 occ config:system:set \
    memcache.local \
    --value '\OC\Memcache\APCu'
+
 occ config:system:set \
    memcache.locking \
    --value '\OC\Memcache\Redis'
+
+service redis-server start
+
 occ config:system:set \
    redis \
    --value '{"host": "127.0.0.1", "port": "{std-port-redis}"}' \
@@ -213,5 +229,3 @@ chown -R www-data. owncloud
 
 **ownCloud is now installed.
 You can confirm that it is ready to use by pointing your web browser to your ownCloud installation.**
-
-IMPORTANT: We recommend you check out the section xref:configuration/server/harden_server.adoc[Hardening and Security Guidance] next.
