--- a/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
@@ -13,7 +13,6 @@
 :pecl_url: https://pecl.php.net/package/smbclient
 :phpmyadmin_latest_url: https://www.phpmyadmin.net/downloads/
 :pear-package_url: https://pear.php.net/package/PEAR/
-:page-aliases: installation/manual_installation/server_prep_ubuntu_18.04.adoc
 
 == Introduction
 
@@ -375,8 +374,8 @@ NOTE: Follow the procedure described in xref:useful-tips[Useful Tips], if you wa
 `Disable Transparent Huge Pages (THP),Transparent Huge Pages`
 
 You may want to use the latest version of phpmyadmin as the OS default versions lags behind
-the {phpmyadmin_latest_url}[latest available stable] version a lot and may report PHP errors with
-PHP 7.3 onwards. Follow this
+the {phpmyadmin_latest_url}[latest available stable] version a lot and may report php errors with
+php7.2 onwards. Follow this
 xref:installation/manual_installation/upgrade_install_phpmyadmin.adoc[quick upgrade guide]
 to install it.
 
