--- a/modules/admin_manual/pages/installation/system_requirements.adoc
+++ b/modules/admin_manual/pages/installation/system_requirements.adoc
@@ -28,7 +28,7 @@ For _best performance_, _stability_, _support_ and _full functionality_, we offi
 |{recommended-php-version}
 |===
 
-(1) MariaDB 10.6 is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and xref:maintenance/upgrading/database_upgrade.adoc[Database Upgrade] guide.
+(1) MariaDB 10.6 is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and the _Database Upgrade_ guide available in the 10.9 documentation.
 
 == Officially Supported Environments
 
@@ -47,7 +47,7 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 * Fedora 32 and 33
 * Red Hat Enterprise Linux/Centos 7.5 and 8
 * SUSE Linux Enterprise Server 12 with SP4/5 and 15
-* Ubuntu 20.04
+* Ubuntu 18.04 and 20.04
 * openSUSE Leap 15.2
 
 |Database
