--- a/modules/admin_manual/pages/index.adoc
+++ b/modules/admin_manual/pages/index.adoc
@@ -1,39 +1,29 @@
 = Introduction
+:owncloud-news-url: https://owncloud.com/news/
+:ownCloud-channel-url: https://www.youtube.com/channel/UC_4gez4lsWqciH-otOlXo5w
+:community-channel-url: https://www.youtube.com/channel/UCA8Ehsdu3KaxSz5KOcCgHbw
 
-Welcome to the ownCloud Server Administration Guide. This guide
-describes administration tasks for ownCloud, the flexible open source
-file synchronization and sharing solution. ownCloud includes the
-ownCloud server, which runs on Linux, client applications for Microsoft
-Windows, Mac OS X and Linux, and mobile clients for the Android and Apple iOS operating systems.
+Welcome to the ownCloud Server Administration Guide. This guide describes administration tasks for ownCloud, the flexible open source file synchronization and sharing solution. ownCloud includes the ownCloud server, which runs on Linux, client applications for Microsoft Windows, Mac OS X and Linux, and mobile clients for the Android and Apple iOS operating systems.
 
-Current editions of ownCloud manuals are always available online at
-https://doc.owncloud.com/[doc.owncloud.com].
+Current editions of ownCloud manuals are always available online at {docs-base-url}[doc.owncloud.com].
 
 ownCloud server is available in three editions:
 
-* The free community-supported server. This is the core server for all
-editions.
-* The Standard Subscription for customers who want paid support for the
-core Server, without Enterprise applications.
-* The Enterprise Subscription provides paid support for the Enterprise
-Edition. This includes the core Server and Enterprise apps.
+* The free community-supported server. This is the core server for all editions.
+* The Standard Subscription for customers who want paid support for the core Server, without Enterprise applications.
+* The Enterprise Subscription provides paid support for the Enterprise Edition. This includes the core Server and Enterprise apps.
 
 == ownCloud Videos and Blogs
 
 See the
-https://www.youtube.com/channel/UC_4gez4lsWqciH-otOlXo5w[official ownCloud channel] and
-https://www.youtube.com/channel/UCA8Ehsdu3KaxSz5KOcCgHbw[ownClouders community channel]
-on YouTube for tutorials, overviews, and conference videos. Visit
-https://owncloud.com/news/[News] to stay up to date.
+{ownCloud-channel-url}[official ownCloud channel] and {community-channel-url}[ownClouders community channel] on YouTube for tutorials, overviews, and conference videos. Visit {owncloud-news-url}[News] to stay up to date.
 
 == Target Audience
 
-This guide is for users who want to install, administer, and optimize
-their ownCloud servers. To learn more about the ownCloud Web user
-interface, and desktop and mobile clients, please refer to their
-respective manuals:
+This guide is for administrators who want to install, administer, and optimize their ownCloud servers. To learn more about the ownCloud Web user interface, and desktop and mobile clients, please refer to their respective manuals. See the developer manual if you would like to contribute:
 
 * xref:user_manual:index.adoc[ownCloud User Manual]
-* https://doc.owncloud.com/desktop/[ownCloud Desktop Client]
-* https://doc.owncloud.com/android/[ownCloud Android App]
-* https://doc.owncloud.com/ios-app/[ownCloud iOS App]
+* xref:developer_manual:index.adoc[ownCloud Developer Manual]
+* {docs-base-url}/desktop/[ownCloud Desktop Client]
+* {docs-base-url}/ios-app/[ownCloud iOS App]
+* {docs-base-url}/android/[ownCloud Android App]
