[10.8] [PR 30] mpm_event conflicts with php
Backport of PR #30

--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -66,7 +66,7 @@ apt install -y \
 
 Note : php 7.4 is the default version installable with Ubuntu 20.04
 
-See the important note using the correct xref:installation/manual_installation/manual_installation_apache.adoc#multi-processing-module-mpm[Multi-Processing Module (MPM)].
+See the important note on using the correct xref:installation/manual_installation/manual_installation_apache.adoc#multi-processing-module-mpm[Multi-Processing Module (MPM)].
 
 === Install the Recommended Packages
 
