--- a/modules/developer_manual/pages/index.adoc
+++ b/modules/developer_manual/pages/index.adoc
@@ -1,7 +1,7 @@
 = Introduction
 
-If you want to contribute please read the
-https://owncloud.com/contribute/join-the-development/contributor-agreement/[Contributor agreement]
+Welcome to the ownCloud Classic Server Developer Guide. If you want to contribute please read the
+https://owncloud.com/contribute/join-the-development/contributor-agreement/[Contributor agreement] first.
 
 [width="100%",cols="25%,36%,39%",]
 |===
