--- a/modules/admin_manual/pages/maintenance/upgrading/update.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/update.adoc
@@ -9,7 +9,7 @@ access, such as shared hosting, for installations with a smaller number
 of users and data, and it automates xref:installation/manual_installation/manual_installation.adoc[manual installations].
 
 IMPORTANT: When upgrading from oC 9.0 to 9.1 with existing Calendars or Addressbooks please have a look at the
-xref:ROOT:server_release_notes.adoc[release notes] of oC 9.0 for important info about this migration.
+xref:{latest-docs-version}@docs:ROOT:server_release_notes.adoc[release notes] of oC 9.0 for important info about this migration.
 
 [CAUTION]
 ====
