--- a/modules/admin_manual/pages/maintenance/upgrading/upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/upgrade.adoc
@@ -11,7 +11,7 @@ the btn:[notification], it will bring you here.
 
 Before beginning an upgrade, please keep the following points in mind:
 
-* Review the xref:ROOT:server_release_notes.adoc[release notes] for important information
+* Review the xref:{latest-docs-version}@docs:ROOT:server_release_notes.adoc[release notes] for important information
 about the needed migration steps during that upgrade to help ensure a
 smooth upgrade process.
 * Check ownCloud's xref:installation/manual_installation/manual_installation_prerequisites.adoc[mandatory requirements] (such as PHP versions and extensions), which can change from one version to the next.
