--- a/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
@@ -5,7 +5,9 @@
 
 == Introduction
 
-This document describes how to manually upgrade your ownCloud installation. After preparing the upgrade, you can decide between two ways of upgrading your instance:
+This document describes how to manually upgrade your ownCloud installation. Because installations can vary, this guide can only give an overview of methods and examples. These examples need to be adapted according your needs and your environment.
+
+After preparing the upgrade, you can decide between two ways of upgrading your instance:
 
 .Script-Guided Upgrade
 This upgrade automates most of the tasks to be done including setting the correct ownership and permissions.
@@ -66,24 +68,32 @@ Go to menu:Settings[Admin > Apps] and disable all third-party apps.
 
 If you have made changes in `.htaccess` located at the webroot of ownCloud, you must backup these changes. Only backup the changes made but not the complete file as this file will be recreated on upgrades and may contain different settings provided by ownCloud. Manual changes in `.htaccess` can be necessary when you e.g. xref:configuration/integration/ms-teams.adoc[Integrate ownCloud into Microsoft Teams].
 
+=== Backup Manual Changes in `.user.ini`
+
+If you have made changes in `.user.ini` located at the webroot of ownCloud, you must backup these changes.
+
 === Download the Latest Release
 
-Download the latest https://owncloud.org/download/[ownCloud server release] to where your previous installation was, in this example the default directory `/var/www/`.
+Download the latest https://owncloud.org/download/[ownCloud server release] to the same location where your previous instance is located, in this example the default directory `/var/www/`.
 [source,console,subs="attributes+"]
 ----
 cd /var/www/
-sudo wget https://download.owncloud.org/community/owncloud-{latest-server-download-version}.tar.bz2
+sudo wget https://download.owncloud.org/community/owncloud-{oc-complete-name}.tar.bz2
 ----
 
 == Script-Guided Upgrade
 
-When using the script-guided upgrade, the script from the xref:installation/manual_installation/manual_installation.adoc#script-guided-installation[Script-Guided Installation] is used. The script xref:installation/manual_installation/script_guided_install.adoc#script-questions[asks questions] and beside other parameters, the *upgrade an existing installation* is selected.
+When using the script-guided upgrade, the script from the xref:installation/manual_installation/manual_installation.adoc#script-guided-installation[Script-Guided Installation] is used. This script can not only **install** a new instance of ownCloud, but also **upgarde** an existing one or can **manage ownership and permissions**. When using the script for upgrading, the script renames the current instance and creates a new instance, copies `config.php` set ownership and permissions etc.
+
+The script xref:installation/manual_installation/script_guided_install.adoc#script-questions[asks questions] and beside other parameters, the *upgrade an existing installation* question is selected.
 
 Follow the script documentation for details on how to install and use it.
 
 NOTE: The script is most convenient if you use links for your `apps`, `apps-external` and your `data` directory, as it takes care of recreating the links. You will be asked about this when you run the script. If you're using regular directories, these are created, but content must be moved or copied manually before finalizing the upgrade. If you aren't using the `apps-external` directory, you must manually take care of copying only those apps which are not part of the new source.
 
 When the script has finished, continue with the xref:upgrade[Upgrade] step described below.
+
+NOTE: When using the script, any manual changes in `.htaccess` or `.user.ini` must be manually transferred from the backup directory the script created to the actual instance directory. 
 
 After the upgrade is finished, you can re-run this script to secure the `.htaccess` files.
 
@@ -106,7 +116,7 @@ Extract the new server release in the location where your previous ownCloud inst
 
 [source,console,subs="attributes+"]
 ----
-sudo tar -xf owncloud-{latest-server-download-version}.tar.bz2
+sudo tar -xf owncloud-{oc-complete-name}.tar.bz2
 ----
 
 With the new source files now in place of where the old ones used to be, copy the `config.php` file from your old ownCloud directory to your new ownCloud directory:
@@ -176,10 +186,9 @@ The upgrade operation can take anywhere from a few minutes to a few hours, depen
 
 Reapply any manual changes made to the `.htaccess` file located in the owncloud webroot. 
 
-=== Strong Permissions for .htaccess
+=== Strong Permissions
 
-.Set strong permissions for the .htaccess files
-* Use `chmod` with `0640` for the .htaccess files.
+* Use `chmod` with `0640` for `.htaccess` and `.user.ini` files.
 
 If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well.
 
