--- a/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
@@ -7,6 +7,8 @@
 
 This document describes how to manually upgrade your ownCloud installation. Because installations can vary, this guide can only give an overview of methods and examples. These examples need to be adapted according your needs and your environment.
 
+NOTE: This guide assumes that you have basic knowledge about Unix terminology, commands and concepts. In case you do not feel familiar with this, ownCloud highly recommends that you create a playground first to try the steps and/or get, if you are entitled to, in touch with ownCloud Support to avoid breaking your system or data loss.
+
 After preparing the upgrade, you can decide between two ways of upgrading your instance:
 
 .Script-Guided Upgrade
@@ -15,8 +17,7 @@ This upgrade automates most of the tasks to be done including setting the correc
 .Manual Step-by-Step Upgrade 
 Using this type of upgrade, you have to do all the steps manually but you can also handle special setups.
 
-NOTE: In this description we assume that your ownCloud installation was located in the default directory: `/var/www/owncloud` and the new release will reside there as well. 
-The path might differ, depending on your installation.
+NOTE: In this description we assume that your ownCloud installation was located in the default directory: `/var/www/owncloud` and the new release will reside there as well. The path might differ, depending on your installation.
 
 == General Preparation
 
@@ -24,7 +25,7 @@ There are several steps necessary before you can start with upgrading your ownCl
 
 === Enable Maintenance Mode
 
-Put your server in xref:maintenance/enable_maintenance.adoc[maintenance mode] and *disable xref:configuration/server/background_jobs_configuration.adoc#cron-jobs[Cron jobs]*.
+Put your server in xref:maintenance/enable_maintenance.adoc[maintenance mode] and *disable* xref:configuration/server/background_jobs_configuration.adoc#cron-jobs[Cron jobs].
 Doing so prevents new logins, locks the sessions of logged-in users, and displays a status screen so that users know what is happening.
 
 TIP: In a clustered environment, check that all nodes are in maintenance mode.
@@ -89,9 +90,9 @@ The script xref:installation/manual_installation/script_guided_install.adoc#scri
 
 Follow the script documentation for details on how to install and use it.
 
-NOTE: The script is most convenient if you use links for your `apps`, `apps-external` and your `data` directory, as it takes care of recreating the links. You will be asked about this when you run the script. If you're using regular directories, these are created, but content must be moved or copied manually before finalizing the upgrade. If you aren't using the `apps-external` directory, you must manually take care of copying only those apps which are not part of the new source.
+NOTE: The script is most convenient if you use links for your `apps-external` and your `data` directory, as it takes care of recreating the links. You will be asked about this when you run the script. If you're using regular directories, these are created, but content must be moved or copied manually before finalizing the upgrade. If you aren't using the `apps-external` directory, you must manually take care of copying only those apps which are not part of the new source.
 
-When the script has finished, continue with the xref:upgrade[Upgrade] step described below.
+When the script has finished, continue with the xref:finalize-the-upgrade[Finalize the Upgrade] step described below.
 
 NOTE: When using the script, any manual changes in `.htaccess` or `.user.ini` must be manually transferred from the backup directory the script created to the actual instance directory. 
 
@@ -119,12 +120,7 @@ Extract the new server release in the location where your previous ownCloud inst
 sudo tar -xf owncloud-{oc-complete-name}.tar.bz2
 ----
 
-With the new source files now in place of where the old ones used to be, copy the `config.php` file from your old ownCloud directory to your new ownCloud directory:
-
-[source,console]
-----
-sudo cp /var/www/backup_owncloud/config/config.php /var/www/owncloud/config/config.php
-----
+=== Copy the data/ Directory
 
 If you keep your `data/` directory _inside_ your `owncloud/` directory, move it from your old version of ownCloud to your new version:
 
@@ -133,11 +129,18 @@ If you keep your `data/` directory _inside_ your `owncloud/` directory, move it 
 sudo mv /var/www/backup_owncloud/data /var/www/owncloud/data
 ----
 
+If you have linked the data directory, for ownCloud it is still inside the `owncloud` directory and you have to re-link it.
+
 If you keep your `data` **outside** of your `owncloud` directory, then you don’t have to do anything with it, because its location is configured in your original `config.php`, and none of the upgrade steps touch it.
 
 === Copy Relevant config.php Content
 
-Copy, or make sure that all relevant `config.php` content from the backup is present in the new installation.
+With the new source files now in place of where the old ones used to be, copy the `config.php` file from your old ownCloud directory to your new ownCloud directory:
+
+[source,console]
+----
+sudo cp /var/www/backup_owncloud/config/config.php /var/www/owncloud/config/config.php
+----
 
 === Market and Marketplace App Upgrades
 
@@ -156,18 +159,44 @@ NOTE: Make sure that all app directories that are defined in the `apps_paths` se
 To finalize the preparation of the upgrade, you need to set the correct ownership and permissions of the new ownCloud files and folders.
 
 .Set correct ownership
+Set the ownership for all files and folders to `root:www-data` **except** the `config` and `data` directory:
+
 [source,console]
 ----
-sudo chown -R www-data:www-data /var/www/owncloud
+sudo find -L /var/www/owncloud \( -path ./data -o -path ./config \) -prune -o -type d -exec chown root:www-data {} \+
+----
+
+[source,console]
+----
+sudo find -L /var/www/owncloud \( -path ./data -o -path ./config \) -prune -o -type f -exec chown root:www-data {} \+
+----
+
+Set the ownership for all files and folders to `www-data:www-data` for the `config` and `data` directory. Note that it is not mandatory to set the ownership of the `data/` directory as it should already have the correct ownership and it can take a while to finish, depending on the size:
+
+[source,console]
+----
+sudo chown -R www-data:www-data /var/www/owncloud/config
+sudo chown -R www-data:www-data /var/www/owncloud/data
 ----
 
 .Set correct permissions
 Use `chmod` on files and directories with different permissions:
 
-* For all files use `0640` +
-* For all directories use `0750`
+* For all files use `0640`
++
+[source,console]
+----
+sudo find . -type f -exec chmod 640 {} \;
+----
 
-If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well.
+* For all directories use `0750`
++
+[source,console]
+----
+sudo find . -type d -exec chmod 750 {} \;
+----
+
+If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well as it automates it.
 
 == Finalize the Upgrade
 
@@ -184,13 +213,22 @@ With the apps disabled and ownCloud in maintenance mode, start the xref:configur
 
 The upgrade operation can take anywhere from a few minutes to a few hours, depending on the size of your installation. When it is finished you will see either a success message or an error message that indicates why the process did not complete successfully.
 
-Reapply any manual changes made to the `.htaccess` file located in the owncloud webroot. 
+== Reapply Manual Changes
+
+Reapply any manual changes made to `.htaccess` files and the `.user.ini` file located in the owncloud webroot. 
+
+The following example command eases to find the differences of two files, which is helpful for reapplying manually added changes to `.htaccess` and `.user.ini`. Replace that paths, directories and files accordingly.
+[source,console]
+----
+diff -y -W 70 --suppress-common-lines owncloud/.user.ini owncloud_2022-02-15-09.18.48/.user.ini
+post_max_size=513M                |     post_max_size=1G
+----
 
 === Strong Permissions
 
-* Use `chmod` with `0640` for `.htaccess` and `.user.ini` files.
+* Check that `chmod` with `0640` for `.htaccess` and `.user.ini` files has been applied.
 
-If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well.
+If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well as it automates it.
 
 === Disable Maintenance Mode
 
