--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -92,7 +92,7 @@ service apache2 restart
 
 [source,console,subs="attributes+"]
 ----
-include::{examplesdir}installation/ubuntu/18.04/create-vhost-config.sh[]
+include::example$installation/ubuntu/18.04/create-vhost-config.sh[]
 ----
 
 ==== Enable the Virtual Host Configuration
@@ -204,7 +204,7 @@ Execute this command to set up {logrotate-url}[log rotation].
 
 [source,console,subs="attributes+"]
 ----
-include::{examplesdir}installation/ubuntu/18.04/configure-log-rotation.sh[]
+include::example$installation/ubuntu/18.04/configure-log-rotation.sh[]
 ----
 
 ==== Finalise the Installation
